update pickup endpoint, update swagger file
